--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,7 +1,11 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
+}
+.wrapper {
+  max-width: 100vw;
+  /* overflow-x: hidden; */
 }
 :root {
   --lightblue: #879fcf;
@@ -18,10 +22,6 @@
   padding: 0 2rem;
 }
 
-.size {
-  width: 1rem;
-  height: 1rem;
-}
 .list p {
   color: white;
 }
@@ -36,10 +36,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 1rem;
+  gap: 2rem;
 }
 
 .homeMenu {
+  list-style-type: none;
   display: flex;
   gap: 1.5rem;
 }
@@ -47,32 +48,10 @@
   text-decoration: none;
   color: black;
 }
-.right-header {
-  display: flex;
-}
-.homeSearch {
-  width: 175px;
-  height: 40px;
-}
-.Search-btn {
-  display: flex;
-  align-items: center;
-}
-.position {
-  position: absolute;
-  z-index: 1;
-  padding-left: -2rem;
-}
-.homeSearch-btn {
-  position: relative;
-  width: 120px;
-  height: 42px;
-  background-color: rgb(27, 181, 181);
-}
 
 /* body section */
 .body {
-  max-width: 98vw;
+  max-width: 100%;
   max-height: auto;
   /* border: 1px solid black; */
   margin: 0 auto;
@@ -80,26 +59,41 @@
   flex-direction: column;
   gap: 2rem;
 }
+/* owl-carosul design */
+
+.owl-nav {
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .upperBody {
+  width: 95vw;
+  margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
 }
+.middleBody {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+
 .grid-section {
   display: grid;
-  /* grid-column-gap: 1rem; */
-  grid-row-gap: 1rem;
+
   justify-items: center;
+  align-content: center;
   grid-template-columns: auto auto auto;
+  /* grid-row-gap: 1.5rem; */
 }
-.grid-section-banner {
-  display: grid;
-  /* grid-column-gap: 1rem; */
-  grid-row-gap: 1rem;
-  justify-items: center;
-  grid-template-columns: auto;
-}
+
 .pagination {
   width: 100vw;
   height: 50px;
@@ -141,4 +135,66 @@
   display: flex;
   flex-direction: row;
   gap: 1.5rem;
+}
+
+/* style for page.php start */
+.page-contains {
+  display: flex;
+  flex-direction: column;
+}
+.cpost {
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  grid-row-gap: 1rem;
+  justify-items: center;
+}
+.card {
+  border: 2px solid black;
+}
+
+.banner {
+  display: grid;
+  grid-template-columns: repeat(1, auto);
+}
+
+/* style for page.php end */
+
+/* pagination style */
+.pagination {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+.page-nav {
+  text-decoration: none;
+  border: 1px solid black;
+  color: black;
+  float: left;
+  padding: 8px 16px;
+}
+
+/* home show-more button design */
+
+.show-more {
+  background-image: linear-gradient(#0dccea, #0d70ea);
+  border: 0;
+  border-radius: 4px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0 5px 15px;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  font-family: Montserrat, sans-serif;
+  font-size: 0.9em;
+  margin: 5px;
+  padding: 10px 15px;
+  text-align: center;
+  user-select: none;
+
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+.show-more a {
+  text-decoration: none;
 }
