--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,11 +1,12 @@
 * {
   margin: 0;
   padding: 0;
-  /* box-sizing: border-box; */
+  box-sizing: border-box;
 }
 .wrapper {
   max-width: 100vw;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
+  margin: 0 auto;
 }
 :root {
   --lightblue: #879fcf;
@@ -13,170 +14,8 @@
   --footergrey: #4e4e4e;
   --footerwhite: #ffffff;
 }
-.upperHeader {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: var(--darkblue);
-  height: 40px;
-  padding: 0 2rem;
-}
 
-.list p {
-  color: white;
-}
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  /* background-color: var(--lightblue); */
-  padding: 0 2rem;
-}
-.left-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 2rem;
-}
-
-.homeMenu {
-  list-style-type: none;
-  display: flex;
-  gap: 1.5rem;
-}
-.homeMenu a {
-  text-decoration: none;
-  color: black;
-}
-
-/* body section */
-.body {
-  max-width: 100%;
-  max-height: auto;
-  /* border: 1px solid black; */
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-}
-/* owl-carosul design */
-
-.owl-nav {
-  position: absolute;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.upperBody {
-  width: 95vw;
-  margin: 0 auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-}
-.middleBody {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  gap: 2rem;
-}
-
-.grid-section {
-  display: grid;
-
-  justify-items: center;
-  align-content: center;
-  grid-template-columns: auto auto auto;
-  /* grid-row-gap: 1.5rem; */
-}
-
-.pagination {
-  width: 100vw;
-  height: 50px;
-  border: 1px solid black;
-}
-
-.footer-section {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background-color: var(--footergrey);
-}
-.footer-parts {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: start;
-  flex-wrap: wrap;
-  max-width: 30%;
-  color: var(--footerwhite);
-  /* border: 2px solid black; */
-}
-
-.below-footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 8rem;
-  gap: 1.5rem;
-  color: black;
-  background-color: var(--footerwhite);
-  padding-bottom: 4rem;
-}
-.below-footer a {
-  text-decoration: none;
-  color: black;
-}
-.menu-position {
-  display: flex;
-  flex-direction: row;
-  gap: 1.5rem;
-}
-
-/* style for page.php start */
-.page-contains {
-  display: flex;
-  flex-direction: column;
-}
-.cpost {
-  display: grid;
-  grid-template-columns: repeat(3, auto);
-  grid-row-gap: 1rem;
-  justify-items: center;
-}
-.card {
-  border: 2px solid black;
-}
-
-.banner {
-  display: grid;
-  grid-template-columns: repeat(1, auto);
-}
-
-/* style for page.php end */
-
-/* pagination style */
-.pagination {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
-}
-.page-nav {
-  text-decoration: none;
-  border: 1px solid black;
-  color: black;
-  float: left;
-  padding: 8px 16px;
-}
-
-/* home show-more button design */
-
+/* home show-more button design start */
 .show-more {
   background-image: linear-gradient(#0dccea, #0d70ea);
   border: 0;
@@ -198,3 +37,244 @@
 .show-more a {
   text-decoration: none;
 }
+/* home show-more button design start end*/
+
+/* Header area start */
+.upperHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--darkblue);
+  height: 40px;
+  padding: 0 2rem;
+}
+
+.list p {
+  color: white;
+}
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 2rem;
+}
+.left-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2rem;
+}
+.homeMenu {
+  list-style-type: none;
+  display: flex;
+  gap: 1.5rem;
+}
+.homeMenu a {
+  text-decoration: none;
+  color: black;
+}
+/* Header area end */
+
+/* Breadcrumb start */
+.breadcrumb {
+  display: flex;
+  padding: 2rem 4rem;
+}
+.breadcrumb a {
+  text-decoration: none;
+  color: black;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 16px;
+}
+/* Breadcrumb end */
+
+/* body section */
+.body {
+  max-width: 100%;
+  max-height: auto;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+/* owl-carosul design */
+/* owl-slider owl-stage-outer owl-nav owl-dots owl-prev owl-next*/
+/* #owl-slider {
+  position: relative;
+  height: 450px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+#owl-slider .owl-stage-outer,
+.owl-nav,
+.owl-dots {
+  position: absolute;
+}
+.owl-nav {
+  width: 100%;
+  height: 80%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.owl-dots .owl-dot span {
+  display: flex;
+  font-size: 20px;
+  border: none;
+}
+
+.owl-nav .owl-prev,
+.owl-next span {
+  font-size: 35px;
+  border: 1px solid black;
+  border-radius: 50%;
+} */
+.upperBody {
+  width: 95vw;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.middleBody {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  margin: 0 auto;
+}
+
+.grid-section {
+  display: grid;
+  width: 100%;
+  justify-items: center;
+  grid-template-columns: repeat(3, auto);
+  grid-row-gap: 1.5rem;
+  grid-column-gap: 1.5rem;
+}
+.grid-section .wp-post-image {
+  width: 450px;
+}
+/* archive page style start */
+.archive-page {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+/* archive page style end */
+
+/* style for page.php start */
+.page-contains {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.cpost {
+  display: grid;
+  grid-row-gap: 1rem;
+  justify-items: center;
+  grid-template-columns: repeat(3, auto);
+}
+/* .card {
+  border: 2px solid black;
+} */
+.cpost .wp-post-image {
+  width: 450px;
+}
+.banner {
+  display: grid;
+  grid-template-columns: repeat(1, auto);
+  grid-row-gap: 1rem;
+}
+.banner .wp-post-image {
+  width: auto;
+}
+.video {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  grid-row-gap: 1rem;
+  grid-column-gap: 4rem;
+}
+/* style for page.php end */
+
+/* style for single.php start */
+.single-section {
+  display: flex;
+  gap: 1rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 2rem;
+}
+/* style for single.php end */
+
+/* pagination style */
+.pagination {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  padding-bottom: 1rem;
+}
+.page-nav {
+  text-decoration: none;
+  border: 1px solid black;
+  color: black;
+  float: left;
+  padding: 8px 16px;
+}
+
+/* Footer section css */
+.footer {
+  width: 100%;
+  background-color: var(--footergrey);
+}
+.footer-section {
+  width: 85%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
+  padding: 3rem 0;
+}
+.footer-parts {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  flex-wrap: wrap;
+  max-width: 30%;
+  color: var(--footerwhite);
+  padding-bottom: 0.5rem;
+}
+.child_sidebar a {
+  text-decoration: none;
+  color: var(--footerwhite);
+}
+.below-footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 2rem;
+  gap: 1.5rem;
+  color: black;
+  background-color: var(--footerwhite);
+}
+.below-footer a {
+  text-decoration: none;
+  color: black;
+}
+.menu-position {
+  display: flex;
+  flex-direction: row;
+  gap: 1.5rem;
+}
+
+/* media queries */
