--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -73,6 +73,12 @@
   text-decoration: none;
   color: black;
 }
+.icon {
+  display: none;
+}
+#myLinks {
+  display: none;
+}
 /* Header area end */
 
 /* Breadcrumb start */
@@ -97,40 +103,11 @@
   flex-direction: column;
   gap: 2rem;
 }
-/* owl-carosul design */
-/* owl-slider owl-stage-outer owl-nav owl-dots owl-prev owl-next*/
-/* #owl-slider {
-  position: relative;
-  height: 450px;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
+/* owl-carosul design start */
+.owl-nav{
+  display: none;
 }
-
-#owl-slider .owl-stage-outer,
-.owl-nav,
-.owl-dots {
-  position: absolute;
-}
-.owl-nav {
-  width: 100%;
-  height: 80%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.owl-dots .owl-dot span {
-  display: flex;
-  font-size: 20px;
-  border: none;
-}
-
-.owl-nav .owl-prev,
-.owl-next span {
-  font-size: 35px;
-  border: 1px solid black;
-  border-radius: 50%;
-} */
+/* owl-carosul design  end*/
 .upperBody {
   width: 95vw;
   margin: 0 auto;
@@ -183,26 +160,34 @@
   justify-items: center;
   grid-template-columns: repeat(3, auto);
 }
-/* .card {
+.card {
   border: 2px solid black;
-} */
+}
 .cpost .wp-post-image {
   width: 450px;
 }
 .banner {
-  display: grid;
+  /* display: grid;
   grid-template-columns: repeat(1, auto);
-  grid-row-gap: 1rem;
+  grid-row-gap: 1rem; */
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap :1rem;
+  align-items: center;
 }
 .banner .wp-post-image {
-  width: auto;
+  width: 769px;
+  height: auto;
+  object-fit: contain;
+  
 }
 .video {
   display: grid;
   grid-template-columns: repeat(2, auto);
   grid-row-gap: 1rem;
-  grid-column-gap: 4rem;
 }
+
 /* style for page.php end */
 
 /* style for single.php start */
@@ -214,6 +199,7 @@
   align-items: center;
   padding-bottom: 2rem;
 }
+
 /* style for single.php end */
 
 /* pagination style */
@@ -278,3 +264,274 @@
 }
 
 /* media queries */
+
+@media screen and (max-width: 480px) {
+  .upperHeader {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--darkblue);
+    height: auto;
+    padding: 0.8rem;
+    gap: 0.8rem;
+  }
+  /* .homeMenu {
+    display: none;
+  } */
+  .desktop-menu {
+    display: none;
+  }
+  .icon {
+    display: block;
+  }
+  /* home page media */
+  .grid-section{
+    display: grid;
+    justify-items: center;
+    grid-template-columns: repeat(1, auto);
+  }
+  .grid-section .wp-post-image {
+    width: 300px;
+    height: 300px;
+  }
+  .page-contains {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .cpost {
+    display: grid;
+    justify-items: center;
+    grid-template-columns: repeat(1, auto);
+  }
+  .cpost .wp-post-image {
+    width: 300px;
+    height: 300px;
+  }
+  .aplus .wp-post-image {
+    height: auto;
+  }
+  .banner {
+    display: grid;
+    grid-template-columns: repeat(1, auto);
+  }
+  .banner .wp-post-image {
+    width: 350px;
+    height: auto;
+    /* object-fit: contain; */
+  }
+  .video {
+    display: grid;
+    grid-template-columns: repeat(1, auto);
+    grid-row-gap: 1rem;
+  }
+  .video iframe {
+    width: 350px;
+  }
+  /* sigle page media style */
+  .single-section .wp-post-image {
+    width: 300px;
+    height: 300px;
+  }
+  .singleaplus .wp-post-image {
+    height: auto;
+  }
+
+  /* footer */
+  .footer-section {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+  }
+  .footer-parts {
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    padding-bottom: 0.5rem;
+  }
+  .below-footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    gap: 1.5rem;
+  }
+  .menu-position {
+    display: none;
+  }
+   /* topnav start */
+   .topnav {
+    overflow: hidden;
+    background-color: #333;
+    position: relative;
+  }
+  .topnav a {
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+  }
+  
+  .topnav a.icon {
+    background: black;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .active {
+    background-color: #04AA6D;
+    color: white;
+  }
+  /* topnav end */
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .upperHeader {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--darkblue);
+    height: auto;
+    padding: 1rem;
+    gap: 0.8rem;
+  }
+  /* .homeMenu {
+    display: none;
+  } */
+  .desktop-menu {
+    display: none;
+  }
+  .icon {
+    display: block;
+  }
+  /* topnav start */
+  .topnav {
+    overflow: hidden;
+    background-color: #333;
+    position: relative;
+  }
+  .topnav a {
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+  }
+  
+  .topnav a.icon {
+    background: black;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .active {
+    background-color: #04AA6D;
+    color: white;
+  }
+  /* topnav end */
+  /* home page media */
+  .grid-section{
+    display: grid;
+    justify-items: center;
+    grid-template-columns: repeat(2, auto);
+    grid-row-gap: 0.8rem;
+    grid-column-gap: 0.8rem;
+  }
+  .grid-section .wp-post-image {
+    width: 220px;
+    height: 300px;
+  }
+  .page-contains {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .cpost {
+    display: grid;
+    justify-items: center;
+    grid-template-columns: repeat(2, auto);
+  }
+  .cpost .wp-post-image {
+    width: 220px;
+    height: 300px;
+  }
+  .aplus .wp-post-image {
+    height: auto;
+  }
+  .banner {
+    display: grid;
+    grid-template-columns: repeat(1, auto);
+  }
+  .banner .wp-post-image {
+    width: 480px;
+    height: auto;
+    /* object-fit: contain; */
+  }
+  .video {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    grid-row-gap: 1rem;
+  }
+  .video iframe {
+    width: 240px;
+    height: auto;
+  }
+  /* footer */
+
+  .footer-section {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+  }
+  .footer-parts {
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    padding-bottom: 0.5rem;
+  }
+ 
+  .below-footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    gap: 1rem;
+  }
+  .menu-position {
+    display: none;
+  } 
+
+}
